--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="\recipes\lasagna.html">Lasagna</a>
+    <a href="\recipes\roti.html">Roti</a>
 </body>
 </html>
