Third recipe Easy Red Thai Curry with Chicken and Broccoli added

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="\recipes\lasagna.html">Lasagna</a>
-    <a href="\recipes\roti.html">Roti</a>
+    <ul>
+        <li><a href="\recipes\lasagna.html">Debbie's Vegetable Lasagna</a></li>
+        <li><a href="\recipes\roti.html">Vegetable Kottu Roti</a></li>
+        <li><a href="\recipes\curry.html">Easy Red Thai Curry with Chicken and Broccoli</a></li>
+    </ul>
 </body>
 </html>
