Final commit - all files formatted

--- a/recipes/curry.html
+++ b/recipes/curry.html
@@ -1,6 +1,5 @@
 <h1>Easy Red Thai Curry with Chicken and Broccoli</h1>
-<img src="\images\curry.webp" alt="Picture of Easy Red Thai Curry with Chicken and Broccoli dish"
-width="50%">
+<img src="\images\curry.webp" alt="Picture of Easy Red Thai Curry with Chicken and Broccoli dish" width="50%">
 <h2>Description</h2>
 <p>This easy Thai curry with chicken and broccoli takes very little time and is nice and spicy.</p>
 <p> You can of course adjust the amount of curry paste to your liking.</p>
@@ -44,7 +43,7 @@ width="50%">
         Add garlic and curry paste and cook until fragrant, about 2 minutes.
     </li>
     <li>
-        Pour in coconut milk and season with sugar and salt. Mix well. Add broccoli, cover, and 
+        Pour in coconut milk and season with sugar and salt. Mix well. Add broccoli, cover, and
         simmer until broccoli is soft, about 7 minutes.
     </li>
     <li>
