--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
 
     <!-- images of dishes -->
     <div id="dishes">
-        <img id="left-dish" src="images\dish_sea_bass.png" alt="Dish sea bass" usemap="#workmap1" width="405"
+        <img id="left-dish" src="images\dish_sea_bass.webp" alt="Dish sea bass" usemap="#workmap1" width="405"
             height="405">
-        <img id="center-dish" src="images\dish_scallops.png" alt="Dish scallops" usemap="#workmap2" width="405"
+        <img id="center-dish" src="images\dish_scallops.webp" alt="Dish scallops" usemap="#workmap2" width="405"
             height="405">
-        <img id="right-dish" src="images\dish_lobster.png" alt="Dish lobster" usemap="#workmap3" width="405"
+        <img id="right-dish" src="images\dish_lobster.webp" alt="Dish lobster" usemap="#workmap3" width="405"
             height="405">
     </div>
 
