--- a/recipes/lobster.html
+++ b/recipes/lobster.html
@@ -13,7 +13,7 @@
 <body>
     <div id="center-column">
         <h1>Lobster Thermidor</h1>
-        <img src="\images\dish_lobster.png" alt="Picture of exclusive plate with lobster">
+        <img src="\images\dish_lobster.webp" alt="Picture of exclusive plate with lobster">
         <h2>Description</h2>
         <p>Geoffrey Smeddle's Lobster Thermidor recipe offers a twist on</p>
         <p>the Parisian classic, bringing it home to Britain with the use of</p>
