--- a/recipes/scallops.html
+++ b/recipes/scallops.html
@@ -13,7 +13,7 @@
 <body>
     <div id="center-column">
         <h1>Scallops with seaweed and miso kombu broth</h1>
-        <img src="\images\dish_scallops.png" alt="Picture of exclusive plate with scallops">
+        <img src="\images\dish_scallops.webp" alt="Picture of exclusive plate with scallops">
         <h2>Description</h2>
         <p>Two varieties of seaweed - kombu and shony - are used to</p>
         <p>complement scallops in this elegant dish. The fishy broth can</p>
