--- a/recipes/sea_bass.html
+++ b/recipes/sea_bass.html
@@ -13,7 +13,7 @@
 <body>
     <div id="center-column">
         <h1>Sea bass with tali macchi sauce</h1>
-        <img src="\images\dish_sea_bass.png" alt="Picture of exclusive plate with sea bass">
+        <img src="\images\dish_sea_bass.webp" alt="Picture of exclusive plate with sea bass">
         <h2>Description</h2>
         <p>Alfred Prasad's flavourful sea bass recipe serves the pan-fried fish fillets with fine beans</p>
         <p>and raw mango. The sea bass is served with a sauce of fresh tomatoes with mustard, curry</p>
